# FoundersFirst

./: PROJECT_CONTEXT.txt  docker-compose.yml  start-all.ps1
.github/workflows/: master_aibackend.yml
ai-backend/: .dockerignore  Dockerfile  Schema.py  agent3.py  app.py  dockerfile  json_to_txt.ipynb  main.py  pyproject.toml  rag.py  requirements.txt  run_server.py  schemes_structured_documents.json  tools.py  utils.py
ai-backend/data-ingestion/: ingestion_pipeline.py
ai-backend/notebooks/: data_ingestion.ipynb  rag.ipynb
backend/: .dockerignore  db.py  dockerfile  main.py  output.txt  pyproject.toml  requirements.txt  schemes_structured_documents.json
backend/schema/: startup_form.sql
docs/: PROJECT_CONTEXT.txt
docs/frontend/: AIBOT_INTEGRATION_EXAMPLE.tsx  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  QUICK_REFERENCE.tsx  SCHEMES_INTEGRATION_EXAMPLE.tsx
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/roadmap/: RoadmapContainer.tsx  RoadmapPhase.tsx  RoadmapStep.tsx
frontend/src/components/scheme/: SchemeCard.tsx
frontend/src/components/scheme-comparison/: SchemeComparisonPanel.tsx  SchemeComparisonSplit.tsx  SchemeComparisonTable.tsx
frontend/src/contexts/: SchemeComparisonContext.tsx  UserProfileContext.tsx
frontend/src/lib/: roadmap-utils.ts  scheme-utils.ts
frontend/src/pages/: AIBot.tsx  About.tsx  Auth.tsx  Schemes.tsx
frontend/src/routes/: ProtectRoutes.tsx
frontend/src/types/: index.ts
