[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "ipywidgets>=8.1.8",
    "jq>=1.11.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-ollama>=1.0.1",
    "lxml>=6.0.2",
    "pymongo[srv]>=4.16.0",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
