[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.2",
    "mysql-connector-python>=9.5.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
]
